--- a/demo_project/demo_app/templates/HtmlPermisos/contenidos.html
+++ b/demo_project/demo_app/templates/HtmlPermisos/contenidos.html
@@ -25,7 +25,7 @@
 	    <td >{{dato.name|capfirst}}</td>
         <td><em>{{dato.app_label}}</em></td>
         <td>{{ dato.model }}</td>
-{#        <!--<td> <a href="{%url 'demo_app.AdminPermisos.views.editar_contenido' dato.id %}">Editar</a> -->#}
+        <td> <a href="{%url 'demo_app.AdminPermisos.views.editar_contenido' dato.id %}">Editar</a>
         </td>
 
 	</tr>
