--- a/demo_project/demo_app/templates/HtmlPermisos/contenidos.html
+++ b/demo_project/demo_app/templates/HtmlPermisos/contenidos.html
@@ -4,7 +4,7 @@
 
 {% block extra_head %}
  <center>
-        <h1>Lista de Usuarios</h1>
+        <h1>Lista de Contenidos</h1>
     </center>
 {% endblock %}
 {% block content %}
