--- a/demo_project/demo_app/templates/base.html
+++ b/demo_project/demo_app/templates/base.html
@@ -37,6 +37,17 @@
                         <li><a href="{% url 'demo_app.AdminUsuarios.views.usuarios' %}">Listar</a></li>
                     </ul>
                 </li>
+                 <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Permisos<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{% url 'demo_app.AdminPermisos.views.nuevo_contenido' %}">Agregar Modulo</a></li>
+                        <li><a href="{% url 'demo_app.AdminPermisos.views.contenidos' %}">Listar Modulos</a></li>
+                        <li><a href="{% url 'demo_app.AdminPermisos.views.nuevo_permiso' %}">Agregar Permisos</a></li>
+                        <li><a href="{% url 'demo_app.AdminPermisos.views.permisos' %}">Listar Modulos</a></li>
+
+
+                    </ul>
+                </li>
                 <li><a href="{% url 'demo_app.views.demo_form' %}">Form</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Forms<b class="caret"></b></a>
