ABM Permisos y demas

--- a/demo_project/demo_app/templates/base.html
+++ b/demo_project/demo_app/templates/base.html
@@ -43,7 +43,8 @@
                         <li><a href="{% url 'demo_app.AdminPermisos.views.nuevo_contenido' %}">Agregar Modulo</a></li>
                         <li><a href="{% url 'demo_app.AdminPermisos.views.contenidos' %}">Listar Modulos</a></li>
                         <li><a href="{% url 'demo_app.AdminPermisos.views.nuevo_permiso' %}">Agregar Permisos</a></li>
-                        <li><a href="{% url 'demo_app.AdminPermisos.views.permisos' %}">Listar Modulos</a></li>
+                        <li><a href="{% url 'demo_app.AdminPermisos.views.permisos' %}">Listar Permisos</a></li>
+
 
 
                     </ul>
