--- a/demo_project/demo_app/templates/HtmlPermisos/permisos.html
+++ b/demo_project/demo_app/templates/HtmlPermisos/permisos.html
@@ -15,15 +15,17 @@
 
 
 
-   <td>
-<form id='formulario' method='post' action=''>{% csrf_token %}
-		     <table>
-                 <td><input type="text" placeholder="Nombre del Modelo" width="200px"></td>
-                 <td style="width: 20px"></td>
-		           <td><input class="btn btn-info btn-lrg" type='submit' value='Buscar'/></td>
-            </table>
-           </form>
-   </td></table>
+{#   <td>#}
+{#<form id='formulario' method='post' action=''>{% csrf_token %}#}
+{#		     <table>#}
+{#                 <td><input type="text" placeholder="Nombre del Modelo" width="200px"></td>#}
+{#                 <td style="width: 20px"></td>#}
+{#		           <td><input class="btn btn-info btn-lrg" type='submit' id="buscar" value='Buscar'/></td>#}
+{#            </table>#}
+{#           </form>#}
+{#   </td>#}
+{#   #}
+   </table>
 
 
 
