--- a/demo_project/demo_app/templates/HtmlProyecto/nuevoproyecto.html
+++ b/demo_project/demo_app/templates/HtmlProyecto/nuevoproyecto.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load bootstrap_toolkit %}
 {% block titulo %}Nuevo Proyecto{% endblock %}
-{% block encabezado %}
+{% block extra_head %}
 
 {% endblock %}
 {% block content %}
@@ -12,7 +12,7 @@
 	<form id='formulario' method='post' action=''>{% csrf_token %}
 		<table>{{formulario}}</table>
 
-		<input class="btn btn-info" type='submit' value='Registrar'/>
+		<input class="btn btn-info" type='submit' value='Guardar'/>
 
 	</form>
     </center>
