--- a/demo_project/demo_app/templates/base.html
+++ b/demo_project/demo_app/templates/base.html
@@ -29,7 +29,7 @@
         <div class="container">
             <a class="brand" href="/">PROJECT X</a>
             <ul class="nav">
-                <!--<li><a href="{% url 'home' %}" class="">Home</a></li>-->
+                <!--li><a href="{% url 'home' %}" class="">Home</a></li-->
                  <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Usuarios<b class="caret"></b></a>
                     <ul class="dropdown-menu">
@@ -46,6 +46,12 @@
                         <li><a href="{% url 'demo_app.AdminPermisos.views.permisos' %}">Listar Modulos</a></li>
 
 
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Proyectos<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                       <li><a href="{% url 'demo_app.AdminProyectos.views.nuevo_proyecto' %}">Agregar Proyecto</a></li>
                     </ul>
                 </li>
                 <li><a href="{% url 'demo_app.views.demo_form' %}">Form</a></li>
