--- a/demo_project/demo_app/templates/HtmlUsuarios/privado.html
+++ b/demo_project/demo_app/templates/HtmlUsuarios/privado.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
-{% block titulo %}Bienvenido{% endblock %}
-{% block encabezado %} 
+{% block title %}Bienvenido{% endblock %}
+{% block extra_head %}
 	<h1>Bienvenido</h1>
 {% endblock %}
 {% block content %}
