Editar Proyecto. Listar Proyecto

--- a/demo_project/demo_app/templates/base.html
+++ b/demo_project/demo_app/templates/base.html
@@ -53,6 +53,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Proyectos<b class="caret"></b></a>
                     <ul class="dropdown-menu">
                        <li><a href="{% url 'demo_app.AdminProyectos.views.nuevo_proyecto' %}">Agregar Proyecto</a></li>
+                        <li><a href="{% url 'demo_app.AdminProyectos.views.proyectos' %}">Listar Proyectos</a></li>
                     </ul>
                 </li>
                 <li><a href="{% url 'demo_app.views.demo_form' %}">Form</a></li>
