--- a/demo_project/demo_app/templates/base.html
+++ b/demo_project/demo_app/templates/base.html
@@ -45,15 +45,20 @@
                         <li><a href="{% url 'demo_app.AdminPermisos.views.nuevo_permiso' %}">Agregar Permisos</a></li>
                         <li><a href="{% url 'demo_app.AdminPermisos.views.permisos' %}">Listar Permisos</a></li>
 
-
-
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Proyectos<b class="caret"></b></a>
                     <ul class="dropdown-menu">
                        <li><a href="{% url 'demo_app.AdminProyectos.views.nuevo_proyecto' %}">Agregar Proyecto</a></li>
-                        <li><a href="{% url 'demo_app.AdminProyectos.views.proyectos' %}">Listar Proyectos</a></li>
+                        <li><a href="{% url 'demo_app.AdminProyectos.views.proyectos' %}">Listar Proyecto</a></li>
+                    </ul>
+                </li>
+                 <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Roles<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                         <li><a href="{% url 'demo_app.AdminRoles.views.nuevo_rol' %}">Agregar Rol</a></li>
+                        <li><a href="{% url 'demo_app.AdminRoles.views.roles' %}">Listar Roles</a></li>
                     </ul>
                 </li>
                 <li><a href="{% url 'demo_app.views.demo_form' %}">Form</a></li>
