--- a/demo_project/demo_app/templates/HtmlProyecto/proyectos.html
+++ b/demo_project/demo_app/templates/HtmlProyecto/proyectos.html
@@ -13,18 +13,18 @@
         {{ lines|pagination }}
    </td>
 
-
-
+{##}
+{##}
 {#   <td>#}
 {#<form id='formulario' method='post' action=''>{% csrf_token %}#}
 {#		     <table>#}
 {#                 <td><input type="text" placeholder="Nombre del Modelo" width="200px"></td>#}
 {#                 <td style="width: 20px"></td>#}
-{#		           <td><input class="btn btn-info btn-lrg" type='submit' id="buscar" value='Buscar'/></td>#}
+{#		           <td><input class="btn btn-info btn-lrg" type='submit' name="buscar" value='Buscar'/></td>#}
 {#            </table>#}
 {#           </form>#}
 {#   </td>#}
-{#   #}
+
    </table>
 
 
