--- a/demo_project/demo_app/templates/HtmlRoles/editarrol.html
+++ b/demo_project/demo_app/templates/HtmlRoles/editarrol.html
@@ -1,24 +1,184 @@
 {% extends 'base.html' %}
 {% load bootstrap_toolkit %}
-{% block title %}Editar Proyecto{% endblock %}
+{% block titulo %}Editar Rol{% endblock %}
 {% block extra_head %}
 
 {% endblock %}
 {% block content %}
     <br>
-    <center><h1>Editar Proyecto</h1></center>
+    <center><h1>Editar Rol</h1></center>
     <br><br>
     <center>
-      Leader
-         <select>
-            <option value="volvo">{{ user.username }}</option>
-        </select>
 
 	<form id='formulario' method='post' action=''>{% csrf_token %}
-		<table>{{formulario}}</table>
+            {#		<table>{{formulario}}</table>#}
 
-		<input class="btn btn-info" type='submit' value='Guardar'/>
 
+        <table>
+            <tr>
+                <th>Nombre: </th>
+                <td><input type="text" required="" value="{{ rol.nombre }}" name="rol_name" width="100px"></td>
+            </tr>
+            <tr>
+                <th>Descripcion: </th>
+                <td><input type="text" required="" value="{{ rol.descripcion }}" name="rol_description" width="100px"></td>
+            </tr>
+        </table>
+
+     <div class="panel panel-default">
+         <div class="panel-heading">
+            <h3 class="panel-title">Asignar Permisos</h3>
+        </div>
+        <div class="panel-body">
+
+
+        <table class="table-bordered ">
+            <tr>
+                <td style="width: 200px; height: 100px" rowspan="4" class="navbar-inner"><center><b>PROYECTO</b></center>
+                    </b><p>El usuario tendra permiso sobre este proyecto</p>    </td>
+                <tr>
+                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Crear Proyecto</p></td>
+                     {% if "add_proyecto" in codenames %}
+                         <td style="width: 50px"><center><input type="checkbox" checked name="add_proyecto"></center></td>
+                     {% else %}
+                           <td style="width: 50px"><center><input type="checkbox" value="{{ check }}"name="add_proyecto"></center></td>
+                     {% endif %}
+
+                </tr>
+                <tr>
+                   <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Modificar Proyecto</p></td>
+                     {% if "edit_proyecto" in codenames %}
+                         <td style="width: 50px"><center><input type="checkbox" checked name="edit_proyecto"> </center></td>
+                    {% else %}
+                          <td style="width: 50px"><center><input type="checkbox" name="edit_proyecto"> </center></td>
+                     {% endif %}
+                </tr>
+                <tr>
+                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Eliminar Proyecto</p>
+                    {% if "delete_proyecto" in codenames %}
+                         <td style="width: 50px"><center><input type="checkbox" checked name="delete_proyecto"></center></td>
+                     {% else %}
+                         <td style="width: 50px"><center><input type="checkbox" name="delete_proyecto"></center></td>
+                    {% endif %}
+                </tr>
+            </tr>
+            <tr>
+              <td style="width: 200px; height: 100px" rowspan="4" class="navbar-inner"><center><b>FASES</b></center>
+                    </b><p>El usuario tendra permiso sobre esta Fase</p>    </td>
+                <tr>
+                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Crear Fases</p></td>
+
+                   {% if "add_fase" in codenames %}
+                        <td style="width: 50px"><center><input type="checkbox" checked name="add_fase"></center></td>
+                    {% else %}
+                         <td style="width: 50px"><center><input type="checkbox" name="add_fase"></center></td>
+                     {% endif %}
+                </tr>
+                <tr>
+                   <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Modificar Fases</p></td>
+                     {% if "edit_fase" in codenames %}
+                        <td style="width: 50px"><center><input type="checkbox" checked name="edit_fase"></center></td>
+                    {% else %}
+                         <td style="width: 50px"><center><input type="checkbox" name="edit_fase"></center></td>
+                     {% endif %}
+                </tr>
+                <tr>
+                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Eliminar Fases</p></td>
+                     {% if "delete_fase" in codenames %}
+                         <td style="width: 50px"><center><input type="checkbox" checked name="delete_fase"></center></td>
+                    {% else %}
+                           <td style="width: 50px"><center><input type="checkbox" name="delete_fase"></center></td>
+                     {% endif %}
+
+                </tr>
+              </tr>
+             <tr>
+             <td style="width: 200px; height: 100px" rowspan="5" class="navbar-inner"><center><b>ITEMS</b></center>
+                    </b><p>El usuario tendra permiso sobre items de este proyecto</p>    </td>
+                <tr>
+                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Crear Items</p></td>
+                     {% if "add_item" in codenames %}
+                           <td style="width: 50px"><center><input type="checkbox" checked  name="add_item"></center></td>
+                    {% else %}
+                           <td style="width: 50px"><center><input type="checkbox"  name="add_item"></center></td>
+                     {% endif %}
+                </tr>
+                <tr>
+                   <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Modificar Items</p></td>
+
+                     {% if "edit_item" in codenames %}
+                           <td style="width: 50px"><center><input type="checkbox" checked  name="edit_item"></center></td>
+                    {% else %}
+                           <td style="width: 50px"><center><input type="checkbox"  name="edit_item"></center></td>
+                     {% endif %}
+
+                </tr>
+                <tr>
+                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Eliminar Items</p></td>
+
+                   {% if "delete_item" in codenames %}
+                         <td style="width: 50px"><center><input type="checkbox" checked name="delete_item"></center></td>
+                    {% else %}
+                         <td style="width: 50px"><center><input type="checkbox" name="delete_item"></center></td>
+                     {% endif %}
+
+                </tr>
+                <tr>
+                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Revivir Items</p></td>
+
+
+                   {% if "revive_item" in codenames %}
+                          <td style="width: 50px"><center><input type="checkbox" checked name="revive_item"></center></td>
+                    {% else %}
+                         <td style="width: 50px"><center><input type="checkbox" name="revive_item"></center></td>
+                     {% endif %}
+
+                </tr>
+
+              </tr>
+        <td style="width: 200px; height: 100px" rowspan="5" class="navbar-inner"><center><b>ROLES</b></center>
+                    </b><p>El usuario podra administrar roles mediante estos permisos</p>    </td>
+                <tr>
+                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Crear Roles</p></td>
+
+                   {% if "add_rol" in codenames %}
+                         <td style="width: 50px"><center><input type="checkbox" checked name="add_rol"></center></td>
+                    {% else %}
+                      <td style="width: 50px"><center><input type="checkbox" name="add_rol"></center></td>
+                     {% endif %}
+
+                </tr>
+                <tr>
+                   <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Modificar Roles</p></td>
+
+                   {% if "edit_rol" in codenames %}
+                        <td style="width: 50px"><center><input type="checkbox" checked name="edit_rol"></center></td>
+                    {% else %}
+                       <td style="width: 50px"><center><input type="checkbox" name="edit_rol"></center></td>
+                     {% endif %}
+                </tr>
+                <tr>
+                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Eliminar Roles</p></td>
+
+                     {% if "delete_rol" in codenames %}
+                         <td style="width: 50px"><center><input type="checkbox" checked name="delete_rol"></center></td>
+                    {% else %}
+                         <td style="width: 50px"><center><input type="checkbox" name="delete_rol"></center></td>
+                     {% endif %}
+                </tr>
+
+
+              </tr>
+
+
+        </table>
+        </div>
+    </div>
+        <br>
+         		<input class="btn btn-info" type='submit' value='Guardar'/>
 	</form>
     </center>
+
+
+
 {% endblock %}
