--- a/demo_project/demo_app/templates/HtmlRoles/roles.html
+++ b/demo_project/demo_app/templates/HtmlRoles/roles.html
@@ -33,11 +33,13 @@
     <tr>
         <th class="navbar-inner">Nombre</th>
         <th class="navbar-inner">Descripcion</th>
+        <th class="navbar-inner">Accion</th>
     </tr>
     {% for dato in roles %}
     <tr>
 	    <td><em>{{dato.nombre}}</em></td>
         <td>{{ dato.descripcion }}</td>
+        <td> <a href="{% url 'demo_app.AdminRoles.views.editar_rol' dato.id_rol %}">Editar</a></td>
 	</tr>
 	{% endfor %}
  </table>
