--- a/demo_project/demo_app/templates/HtmlRoles/editarrol.html
+++ b/demo_project/demo_app/templates/HtmlRoles/editarrol.html
@@ -2,7 +2,21 @@
 {% load bootstrap_toolkit %}
 {% block titulo %}Editar Rol{% endblock %}
 {% block extra_head %}
+<script type="text/javascript">
+    function marcar(source)
+    {
+        checkboxes=document.getElementsByTagName('input'); //obtenemos todos los controles del tipo Input
+        for(i=0;i<checkboxes.length;i++) //recoremos todos los controles
+        {
 
+            if(checkboxes[i].type == "checkbox") //solo si es un checkbox entramos
+            {
+                checkboxes[i].checked=source.checked; //si es un checkbox le damos el valor del checkbox que lo llamó (Marcar/Desmarcar Todos)
+            }
+        }
+    }
+
+</script>
 {% endblock %}
 {% block content %}
     <br>
@@ -27,8 +41,20 @@
 
      <div class="panel panel-default">
          <div class="panel-heading">
-            <h3 class="panel-title">Asignar Permisos</h3>
+             <table>
+                 <tr>
+                 <td> <h3 class="panel-title">Asignar Permisos</h3></td>
+                  </tr>
+                 <tr>
+
+                 <td>Marcar/Desmarcar Todos: <input type="checkbox" onclick="marcar(this);" /> </td>
+                 </tr>
+             </table>
+
+
         </div>
+
+
         <div class="panel-body">
 
 
@@ -41,7 +67,7 @@
                      {% if "add_proyecto" in codenames %}
                          <td style="width: 50px"><center><input type="checkbox" checked name="add_proyecto"></center></td>
                      {% else %}
-                           <td style="width: 50px"><center><input type="checkbox" value="{{ check }}"name="add_proyecto"></center></td>
+                           <td style="width: 50px"><center><input type="checkbox" name="add_proyecto"></center></td>
                      {% endif %}
 
                 </tr>
@@ -148,6 +174,7 @@
                      {% endif %}
 
                 </tr>
+
                 <tr>
                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Modificar Roles</p></td>
 
@@ -175,7 +202,7 @@
         </div>
     </div>
         <br>
-         		<input class="btn btn-info" type='submit' value='Guardar'/>
+         		<input class="btn btn-info" type='submit' value='Actualizar'/>
 	</form>
     </center>
 
