--- a/demo_project/demo_app/templates/HtmlRoles/eliminarrol.html
+++ b/demo_project/demo_app/templates/HtmlRoles/eliminarrol.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 {% load bootstrap_toolkit %}
-{% block titulo %}Eliminar Proyecto{% endblock %}
+{% block titulo %}Eliminar Rol{% endblock %}
 {% block encabezado %} 
 
 {% endblock %}
 {% block content %}
     <br>
-    <center><h1>Eliminar Proyecto</h1></center>
+    <center><h1>Eliminar Rol</h1></center>
     <br><br>
     <center>
-    <p>Esta seguro que desea eliminar el proyecto {{ proyecto.nombre }}<p>
+    <p>Esta seguro que desea eliminar el Rol {{ rol.nombre }}<p>
         </center>
     <center>
 
