--- a/demo_project/demo_app/templates/HtmlRoles/nuevorol.html
+++ b/demo_project/demo_app/templates/HtmlRoles/nuevorol.html
@@ -2,12 +2,33 @@
 {% load bootstrap_toolkit %}
 {% block titulo %}Nuevo Rol{% endblock %}
 {% block extra_head %}
+<script type="text/javascript">
+    function marcar(source)
+    {
+        checkboxes=document.getElementsByTagName('input'); //obtenemos todos los controles del tipo Input
+        for(i=0;i<checkboxes.length;i++) //recoremos todos los controles
+        {
 
+            if(checkboxes[i].type == "checkbox") //solo si es un checkbox entramos
+            {
+                checkboxes[i].checked=source.checked; //si es un checkbox le damos el valor del checkbox que lo llamó (Marcar/Desmarcar Todos)
+            }
+        }
+    }
+
+</script>
 {% endblock %}
 {% block content %}
-    <br>
+    {% if rol_ya %}
+<center>
+<div style="width: 300px"    class="alert alert-warning alert-dismissable">
+  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+  <strong>Alerta!</strong> Ya existe un rol con ese nombre!
+</div>
+</center>
+    {% endif %}
     <center><h1>Nuevo Rol</h1></center>
-    <br><br>
+    <br>
     <center>
 
 	<form id='formulario' method='post' action=''>{% csrf_token %}
@@ -27,7 +48,16 @@
 
      <div class="panel panel-default">
          <div class="panel-heading">
-            <h3 class="panel-title">Asignar Permisos</h3>
+             <table>
+                 <tr>
+                      <h3 class="panel-title">Asignar Permisos</h3>
+                 </tr>
+                  <tr>
+
+                 <td>Marcar/Desmarcar Todos: <input type="checkbox" onclick="marcar(this);" /> </td>
+                 </tr>
+             </table>
+
         </div>
         <div class="panel-body">
 
