--- a/demo_project/demo_app/templates/HtmlRoles/roles.html
+++ b/demo_project/demo_app/templates/HtmlRoles/roles.html
@@ -39,7 +39,8 @@
     <tr>
 	    <td><em>{{dato.nombre}}</em></td>
         <td>{{ dato.descripcion }}</td>
-        <td> <a href="{% url 'demo_app.AdminRoles.views.editar_rol' dato.id_rol %}">Editar</a></td>
+        <td> <a href="{% url 'demo_app.AdminRoles.views.editar_rol' dato.id_rol %}">Editar</a> -
+            <a href="{% url 'demo_app.AdminRoles.views.eliminar_rol' dato.id_rol %}">Eliminar</a></td>
 	</tr>
 	{% endfor %}
  </table>
