--- a/demo_project/demo_app/templates/base.html
+++ b/demo_project/demo_app/templates/base.html
@@ -61,22 +61,22 @@
                         <li><a href="{% url 'demo_app.AdminRoles.views.roles' %}">Listar Roles</a></li>
                     </ul>
                 </li>
-                <li><a href="{% url 'demo_app.views.demo_form' %}">Form</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Forms<b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="{% url 'demo_app.views.demo_form' %}?layout=vertical">Vertical</a></li>
-                        <li><a href="{% url 'demo_app.views.demo_form' %}?layout=horizontal">Horizontal</a></li>
-                        <li><a href="{% url 'demo_app.views.demo_form_inline' %}?layout=inline">Inline</a></li>
-                        <li><a href="{% url 'demo_app.views.demo_form_inline' %}?layout=search">Search</a></li>
-                        <li><a href="{% url 'demo_app.views.demo_form_with_template' %}?layout=horizontal">Using template</a></li>
-                    </ul>
-                </li>
-                <li><a href="{% url 'formset' %}">Formset</a></li>
-                <li><a href="{% url 'tabs' %}">Tabs &amp; Pills</a></li>
-                <li><a href="{% url 'pagination' %}">Pagination</a></li>
-                <li><a href="{% url 'buttons' %}">Buttons</a></li>
-                <li><a href="{% url 'contact' %}">Contact</a></li>
+{#                <li><a href="{% url 'demo_app.views.demo_form' %}">Form</a></li>#}
+{#                <li class="dropdown">#}
+{#                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Forms<b class="caret"></b></a>#}
+{#                    <ul class="dropdown-menu">#}
+{#                        <li><a href="{% url 'demo_app.views.demo_form' %}?layout=vertical">Vertical</a></li>#}
+{#                        <li><a href="{% url 'demo_app.views.demo_form' %}?layout=horizontal">Horizontal</a></li>#}
+{#                        <li><a href="{% url 'demo_app.views.demo_form_inline' %}?layout=inline">Inline</a></li>#}
+{#                        <li><a href="{% url 'demo_app.views.demo_form_inline' %}?layout=search">Search</a></li>#}
+{#                        <li><a href="{% url 'demo_app.views.demo_form_with_template' %}?layout=horizontal">Using template</a></li>#}
+{#                    </ul>#}
+{#                </li>#}
+{#                <li><a href="{% url 'formset' %}">Formset</a></li>#}
+{#                <li><a href="{% url 'tabs' %}">Tabs &amp; Pills</a></li>#}
+{#                <li><a href="{% url 'pagination' %}">Pagination</a></li>#}
+{#                <li><a href="{% url 'buttons' %}">Buttons</a></li>#}
+{#                <li><a href="{% url 'contact' %}">Contact</a></li>#}
             </ul>
             <div>
                 <a href="{% url 'demo_app.AdminUsuarios.views.cerrar' %}">Logout</a>
