--- a/demo_project/demo_app/templates/HtmlRoles/roles.html
+++ b/demo_project/demo_app/templates/HtmlRoles/roles.html
@@ -3,10 +3,15 @@
 {% load bootstrap_toolkit %}
 
 {% block extra_head %}
- <center>
-        <h1>Roles</h1>
-    </center>
+
+<script>
+function abrir(url) {
+open(url,'','top=300,left=300,width=300,height=300') ;
+}
+</script>
+ <center> <h1>Roles</h1></center>
 {% endblock %}
+<body onload="abrir()">
 {% block content %}
    <table>
    <td style="width: 70%;margin-right: 0px; margin-left: 100%; ">
@@ -40,7 +45,9 @@
 	    <td><em>{{dato.nombre}}</em></td>
         <td>{{ dato.descripcion }}</td>
         <td> <a href="{% url 'demo_app.AdminRoles.views.editar_rol' dato.id_rol %}">Editar</a> -
-            <a href="{% url 'demo_app.AdminRoles.views.eliminar_rol' dato.id_rol %}">Eliminar</a></td>
+            <a href="{% url 'demo_app.AdminRoles.views.eliminar_rol' dato.id_rol %}">Eliminar</a> -
+            <a href="{% url 'demo_app.AdminRoles.views.ver_rol' dato.id_rol %}">Ver Permisos</a> </td>
+
 	</tr>
 	{% endfor %}
  </table>
@@ -51,3 +58,5 @@
 
 
 {% endblock %}
+</body>
+
