--- a/demo_project/demo_app/templates/base.html
+++ b/demo_project/demo_app/templates/base.html
@@ -29,7 +29,7 @@
         <div class="container">
             <a class="brand" href="/">PROJECT X</a>
             <ul class="nav">
-                <!--li><a href="{% url 'home' %}" class="">Home</a></li-->
+
                  <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Usuarios<b class="caret"></b></a>
                     <ul class="dropdown-menu">
@@ -96,13 +96,13 @@
 
     <footer class="row">
         <div class="span6">
-            <p>This is <a href="https://github.com/dyve/django-bootstrap-toolkit">django-bootstrap-toolkit</a></p>
+
         </div>
         <div class="span6" style="text-align:right">
             <p>
-                &copy; <a href="http://twitter.com/dyve">Dylan Verheul</a> 2012
-                |
-                <a href="https://raw.github.com/dyve/django-bootstrap-toolkit/master/LICENSE">license</a>
+                &copy; <a href="#">Project X</a> 2014
+
+
             </p>
         </div>
     </footer>
