--- a/demo_project/demo_app/templates/HtmlUsuarios/usuarios.html
+++ b/demo_project/demo_app/templates/HtmlUsuarios/usuarios.html
@@ -20,6 +20,7 @@
         <th class="navbar-inner">Nombre</th>
         <th class="navbar-inner">Apellido</th>
         <th class="navbar-inner">Activo</th>
+        <th class="navbar-inner">Rol</th>
         <th class="navbar-inner">Accion</th>
     </tr>
     {% for dato in usuarios %}
@@ -29,6 +30,16 @@
         <td>{{ dato.first_name }}</td>
         <td>{{ dato.last_name }}</td>
         <td>{{ dato.is_active }}</td>
+{#    for r in roles:#}
+{#        print r.rol.descripcion#}
+{#        print r.user.username#}
+
+        <td> {% for r in roles %}
+              {% if r.user.id == dato.id %}
+                {{ r.rol.nombre }}
+               {% endif %}
+             {% endfor %}
+            </td>
         <td>
             {% if dato.is_active %}
                 <a href="{% url 'demo_app.AdminUsuarios.views.desactivar_usuario' dato.id %}">Desactivar</a>
