control de permisos

--- a/demo_project/demo_app/templates/HtmlProyecto/nuevoproyecto.html
+++ b/demo_project/demo_app/templates/HtmlProyecto/nuevoproyecto.html
@@ -11,7 +11,7 @@
     <center>
       Leader
          <select>
-            <option value="volvo">{{ user.username }}</option>
+            <option >{{ user.username }}</option>
         </select>
 
 	<form id='formulario' method='post' action=''>{% csrf_token %}
