--- a/demo_project/demo_app/templates/HtmlProyecto/proyectos.html
+++ b/demo_project/demo_app/templates/HtmlProyecto/proyectos.html
@@ -29,7 +29,7 @@
 
 
 
- <table class="table table-bordered table-condensed" >
+ <table class="table" >
     <tr>
         <th class="navbar-inner">Nombre</th>
         <th class="navbar-inner">Leader</th>
