--- a/demo_project/demo_app/templates/HtmlRoles/roles.html
+++ b/demo_project/demo_app/templates/HtmlRoles/roles.html
@@ -42,8 +42,8 @@ open(url,'','top=300,left=300,width=300,height=300') ;
     <tr>
 	    <td><em>{{dato.nombre}}</em></td>
         <td>{{ dato.descripcion }}</td>
-        <td> <a href="{% url 'demo_app.AdminRoles.views.editar_rol' dato.id_rol %}">Editar</a> -
-            <a href="{% url 'demo_app.AdminRoles.views.eliminar_rol' dato.id_rol %}">Eliminar</a> -
+        <td> <a href="{% url 'demo_app.AdminRoles.views.nuevo_rol' dato.id_rol %}">Editar</a> -
+{#            <a href="{% url 'demo_app.AdminRoles.views.eliminar_rol' dato.id_rol %}">Eliminar</a> -#}
             <a href="{% url 'demo_app.AdminRoles.views.ver_rol' dato.id_rol %}">Ver Permisos</a> </td>
 
 	</tr>
