--- a/demo_project/demo_app/templates/HtmlRoles/verrol.html
+++ b/demo_project/demo_app/templates/HtmlRoles/verrol.html
@@ -1,186 +1,204 @@
 {% extends 'base.html' %}
 {% load bootstrap_toolkit %}
-{% block titulo %}Nuevo Proyecto{% endblock %}
+{% block titulo %}{{ modo }} Rol{% endblock %}
 {% block extra_head %}
+<script type="text/javascript">
+    function marcar(source)
+    {
+        checkboxes=document.getElementsByTagName('input'); //obtenemos todos los controles del tipo Input
+        for(i=0;i<checkboxes.length;i++) //recoremos todos los controles
+        {
 
+            if(checkboxes[i].type == "checkbox") //solo si es un checkbox entramos
+            {
+                checkboxes[i].checked=source.checked; //si es un checkbox le damos el valor del checkbox que lo llamó (Marcar/Desmarcar Todos)
+            }
+        }
+    }
+
+</script>
 {% endblock %}
 {% block content %}
- <center>
-              <center><h2> Ver Rol</h2></center>
-        <table>
+    {% if rol_ya %}
+<center>
+<div style="width: 300px"    class="alert alert-warning alert-dismissable">
+  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+  <strong>Alerta!</strong> Ya existe un rol con ese nombre!
+</div>
+</center>
+    {% endif %}
+    <center><h1>{{ modo }} Rol</h1></center>
+    <br>
+    <center>
 
+	<form id='formulario' method='post' action=''>{% csrf_token %}
+            {#		<table>{{formulario}}</table>#}
+
+
+        <table>
             <tr>
                 <th>Nombre: </th>
-                <td><input type="text" disabled required="" value="{{ rol.nombre }}" name="rol_name" width="100px"></td>
+                <td><input type="text" required="" disabled value="{{ rol.nombre }}" name="rol_name" width="100px"></td>
             </tr>
             <tr>
                 <th>Descripcion: </th>
-                <td><input type="text" disabled required="" value="{{ rol.descripcion }}" name="rol_description" width="100px"></td>
+                <td><input type="text" required="" disabled value="{{ rol.descripcion }}"  name="rol_description" width="100px"></td>
             </tr>
         </table>
-</center>
 
      <div class="panel panel-default">
          <div class="panel-heading">
-             <center>
-                <table>
-{#                    <td><a class="btn btn-info" href="{% url 'demo_app.AdminRoles.views.roles' %}"> << Volver</a></td>#}
-{##}
-{#                    <td style="width: 30px"></td>#}
-                    <td> <center><h3 class="panel-title"> Permisos</h3></center></td>
+             <table>
+                 <tr>
+                      <h3 class="panel-title">Asignar Permisos</h3>
+                 </tr>
+                  <tr>
 
-                </table>
-                 </center>
+                 <td>Marcar/Desmarcar Todos: <input type="checkbox" disabled onclick="marcar(this);" /> </td>
+                 </tr>
+             </table>
 
-          </div>
-
-
+        </div>
         <div class="panel-body">
 
-        <center>
+
         <table class="table-bordered ">
             <tr>
-                <td style="width: 200px; height: 100px" rowspan="4" class="navbar-inner"><center><b>PROYECTO</b></center>
+                <td style="width: 200px; height: 100px" rowspan="5" class="navbar-inner"><center><b>PROYECTO</b></center>
                     </b><p>El usuario tendra permiso sobre este proyecto</p>    </td>
                 <tr>
                     <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Crear Proyecto</p></td>
-                     {% if "add_proyecto" in codenames %}
-                         <td style="width: 50px"><center><input type="checkbox" disabled checked name="add_proyecto"></center></td>
-                     {% else %}
-                           <td style="width: 50px"><center><input type="checkbox" disabled name="add_proyecto"></center></td>
-                     {% endif %}
-
+                    <td style="width: 50px"><center><input  type="checkbox" {% if permiso.add_project  %} checked {% endif %} disabled name="add_proyecto"></center></td>
                 </tr>
                 <tr>
                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Modificar Proyecto</p></td>
-                     {% if "edit_proyecto" in codenames %}
-                         <td style="width: 50px"><center><input type="checkbox"  disabled checked name="edit_proyecto"> </center></td>
-                    {% else %}
-                          <td style="width: 50px"><center><input type="checkbox"  disabled name="edit_proyecto"> </center></td>
-                     {% endif %}
+                    <td style="width: 50px"><center><input disabled type="checkbox" {% if permiso.edit_project  %} checked {% endif %} name="edit_proyecto"> </center></td>
                 </tr>
                 <tr>
-                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Eliminar Proyecto</p>
-                    {% if "delete_proyecto" in codenames %}
-                         <td style="width: 50px"><center><input type="checkbox"  disabled checked name="delete_proyecto"></center></td>
-                     {% else %}
-                         <td style="width: 50px"><center><input type="checkbox" disabled  name="delete_proyecto"></center></td>
-                    {% endif %}
+                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Eliminar Proyecto</p></td>
+                   <td style="width: 50px"><center><input disabled type="checkbox" {% if permiso.delete_project  %} checked {% endif %} name="delete_proyecto"></center></td>
+                </tr>
+                <tr>
+                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Consultar Proyecto</p></td>
+                   <td style="width: 50px"><center><input disabled type="checkbox" {% if permiso.consultar_project  %} checked {% endif %} name="consultar_proyecto"></center></td>
                 </tr>
             </tr>
             <tr>
-              <td style="width: 200px; height: 100px" rowspan="4" class="navbar-inner"><center><b>FASES</b></center>
-                    </b><p>El usuario tendra permiso sobre esta Fase</p>    </td>
+              <td style="width: 200px; height: 100px" rowspan="2" class="navbar-inner"><center><b>FASES</b></center>
+                    </b><p>El usuario Podra ver Fases</p>    </td>
                 <tr>
-                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Crear Fases</p></td>
-
-                   {% if "add_fase" in codenames %}
-                        <td style="width: 50px"><center><input type="checkbox" disabled  checked name="add_fase"></center></td>
-                    {% else %}
-                         <td style="width: 50px"><center><input type="checkbox" disabled  name="add_fase"></center></td>
-                     {% endif %}
-                </tr>
-                <tr>
-                   <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Modificar Fases</p></td>
-                     {% if "edit_fase" in codenames %}
-                        <td style="width: 50px"><center><input type="checkbox" disabled  checked name="edit_fase"></center></td>
-                    {% else %}
-                         <td style="width: 50px"><center><input type="checkbox"  disabled name="edit_fase"></center></td>
-                     {% endif %}
-                </tr>
-                <tr>
-                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Eliminar Fases</p></td>
-                     {% if "delete_fase" in codenames %}
-                         <td style="width: 50px"><center><input type="checkbox"  disabled checked name="delete_fase"></center></td>
-                    {% else %}
-                           <td style="width: 50px"><center><input type="checkbox"  disabled name="delete_fase"></center></td>
-                     {% endif %}
-
+                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Ver Fases</p></td>
+                    <td style="width: 50px"><center><input disabled {% if permiso.ver_fase %} checked {% endif %} type="checkbox" name="ver_fase"></center></td>
                 </tr>
               </tr>
+
              <tr>
-             <td style="width: 200px; height: 100px" rowspan="5" class="navbar-inner"><center><b>ITEMS</b></center>
+
+             <td style="width: 200px; height: 100px" rowspan="7" class="navbar-inner"><center><b>ITEMS</b></center>
                     </b><p>El usuario tendra permiso sobre items de este proyecto</p>    </td>
                 <tr>
                     <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Crear Items</p></td>
-                     {% if "add_item" in codenames %}
-                           <td style="width: 50px"><center><input type="checkbox"  disabled checked  name="add_item"></center></td>
-                    {% else %}
-                           <td style="width: 50px"><center><input type="checkbox"  disabled  name="add_item"></center></td>
-                     {% endif %}
+                    <td style="width: 50px"><center><input disabled {% if permiso.add_item  %} checked {% endif %} type="checkbox" name="add_item"></center></td>
                 </tr>
                 <tr>
                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Modificar Items</p></td>
-
-                     {% if "edit_item" in codenames %}
-                           <td style="width: 50px"><center><input type="checkbox" disabled  checked  name="edit_item"></center></td>
-                    {% else %}
-                           <td style="width: 50px"><center><input type="checkbox" disabled   name="edit_item"></center></td>
-                     {% endif %}
-
+                    <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.edit_item  %} checked {% endif %} name="edit_item"></center></td>
                 </tr>
                 <tr>
                     <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Eliminar Items</p></td>
-
-                   {% if "delete_item" in codenames %}
-                         <td style="width: 50px"><center><input type="checkbox" disabled  checked name="delete_item"></center></td>
-                    {% else %}
-                         <td style="width: 50px"><center><input type="checkbox" disabled  name="delete_item"></center></td>
-                     {% endif %}
-
+                   <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.delete_item  %} checked {% endif %} name="delete_item"></center></td>
                 </tr>
                 <tr>
                     <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Revivir Items</p></td>
-
-
-                   {% if "revive_item" in codenames %}
-                          <td style="width: 50px"><center><input type="checkbox"  disabled checked name="revive_item"></center></td>
-                    {% else %}
-                         <td style="width: 50px"><center><input type="checkbox"  disabled name="revive_item"></center></td>
-                     {% endif %}
-
+                   <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.revive_item  %} checked {% endif %} name="revive_item"></center></td>
+                </tr>
+                <tr>
+                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Consultar Items</p></td>
+                   <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.consultar_item  %} checked {% endif %} name="consultar_item"></center></td>
+                </tr>
+                <tr>
+                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Relacionar Items</p></td>
+                   <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.relacionar_item  %} checked {% endif %} name="relacionar_item"></center></td>
+                </tr>
+              </tr>
+              <tr>
+              <td style="width: 200px; height: 100px" rowspan="4" class="navbar-inner"><center><b>TIPO DE ITEMS</b></center>
+                    </b><p>El usuario Podra Administrar Tipos de Items</p>    </td>
+                <tr>
+                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Crear Tipo de Item</p></td>
+                    <td style="width: 50px"><center><input type="checkbox"  disabled {% if permiso.add_tipo_item  %} checked {% endif %} name="add_tipo_item"></center></td>
+                </tr>
+                 <tr>
+                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Modificar Tipo de Item</p></td>
+                    <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.edit_tipo_item  %} checked {% endif %} name="edit_tipo_item"></center></td>
+                </tr>
+                 <tr>
+                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Eliminar Tipo de Item</p></td>
+                    <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.delete_tipo_item  %} checked {% endif %} name="delete_tipo_item"></center></td>
                 </tr>
 
+
               </tr>
-        <td style="width: 200px; height: 100px" rowspan="5" class="navbar-inner"><center><b>ROLES</b></center>
+
+        <td style="width: 200px; height: 100px" rowspan="7" class="navbar-inner"><center><b>ROLES</b></center>
                     </b><p>El usuario podra administrar roles mediante estos permisos</p>    </td>
                 <tr>
                     <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Crear Roles</p></td>
-
-                   {% if "add_rol" in codenames %}
-                         <td style="width: 50px"><center><input type="checkbox"  disabled checked name="add_rol"></center></td>
-                    {% else %}
-                      <td style="width: 50px"><center><input type="checkbox"  disabled name="add_rol"></center></td>
-                     {% endif %}
-
+                    <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.add_rol  %} checked {% endif %} name="add_rol"></center></td>
                 </tr>
-
                 <tr>
                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Modificar Roles</p></td>
-
-                   {% if "edit_rol" in codenames %}
-                        <td style="width: 50px"><center><input type="checkbox"  disabled checked name="edit_rol"></center></td>
-                    {% else %}
-                       <td style="width: 50px"><center><input type="checkbox" disabled  name="edit_rol"></center></td>
-                     {% endif %}
+                    <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.edit_rol  %} checked {% endif %} name="edit_rol"></center></td>
                 </tr>
                 <tr>
                     <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Eliminar Roles</p></td>
-
-                     {% if "delete_rol" in codenames %}
-                         <td style="width: 50px"><center><input type="checkbox"  disabled checked name="delete_rol"></center></td>
-                    {% else %}
-                         <td style="width: 50px"><center><input type="checkbox"  disabled name="delete_rol"></center></td>
-                     {% endif %}
+                   <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.delete_rol  %} checked {% endif %} name="delete_rol"></center></td>
+                </tr>
+                <tr>
+                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Consultar Roles</p></td>
+                   <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.consultar_rol  %} checked {% endif %} name="consultar_rol"></center></td>
+                </tr>
+                <tr>
+                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Asignar Roles</p></td>
+                   <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.asignar_rol  %} checked {% endif %} name="asignar_rol"></center></td>
+                </tr>
+                <tr>
+                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Desasignar Roles</p></td>
+                   <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.desasignar_rol  %} checked {% endif %} name="desasignar_rol"></center></td>
                 </tr>
 
 
               </tr>
+                <td style="width: 200px; height: 100px" rowspan="5" class="navbar-inner"><center><b>Usuarios</b></center>
+                    </b><p>El usuario tendra permiso para Administrar Usuarios</p>    </td>
+                <tr>
+                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Crear Usuarios</p></td>
+                    <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.add_user  %} checked {% endif %} name="add_user"></center></td>
+                </tr>
+                <tr>
+                   <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Modificar Usuarios</p></td>
+                    <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.edit_user  %} checked {% endif %} name="edit_user"></center></td>
+                </tr>
+                <tr>
+                   <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Desactivar Usuarios</p></td>
+                    <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.delete_user  %} checked {% endif %} name="delete_user"></center></td>
+                </tr>
+             <tr>
+                   <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Consultar Usuarios</p></td>
+                    <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.consultar_user  %} checked {% endif %} name="consultar_user"></center></td>
+                </tr>
+            </tr>
+
 
 
         </table>
-        </center>
         </div>
     </div>
+        <br>
+         		<input class="btn btn-info" type='submit' value='Volver'/>
+	</form>
+    </center>
+
+
 
 {% endblock %}
