--- a/demo_project/demo_app/templates/HtmlRoles/asignarrol.html
+++ b/demo_project/demo_app/templates/HtmlRoles/asignarrol.html
@@ -42,7 +42,8 @@
 </table>
 
 
-		<input class="btn btn-info" type='submit' value='Asignar'/>
+		<input class="btn btn-info" name="button" type='submit' value='Volver'/>
+        <input class="btn btn-info" name="button" type='submit' value='Asignar'/>
 
 	</form>
     </center>
