--- a/demo_project/demo_app/templates/base.html
+++ b/demo_project/demo_app/templates/base.html
@@ -42,14 +42,16 @@
                     <ul class="dropdown-menu">
                        <li><a href="{% url 'demo_app.AdminProyectos.views.nuevo_proyecto' %}">Agregar Proyecto</a></li>
                         <li><a href="{% url 'demo_app.AdminProyectos.views.proyectos' %}">Listar Proyecto</a></li>
+                        <li><a href="{% url 'demo_app.AdminProyectos.views.mis_proyectos' %}">Mis Proyectos</a></li>
                     </ul>
                 </li>
                  <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Roles<b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="{% url 'demo_app.AdminRoles.views.nuevo_rol' %}">Agregar Rol</a></li>
-                        <li><a href="{% url 'demo_app.AdminRoles.views.roles' %}">Listar Roles</a></li>
-                        <li><a href="{% url 'demo_app.AdminRoles.views.nuevo_rol_user' %}">Asignar Rol</a></li>
+{#                        <li><a href="{% url 'demo_app.AdminRoles.views.nuevo_rol' %}">Agregar Rol</a></li>#}
+
+{#                        <li><a href="{% url 'demo_app.AdminRoles.views.roles' %}">Listar Roles</a></li>#}
+
 
                     </ul>
                 </li>
