--- a/demo_project/demo_app/templates/HtmlTipoItem/tipoitem.html
+++ b/demo_project/demo_app/templates/HtmlTipoItem/tipoitem.html
@@ -17,13 +17,12 @@
    <td>
             <form id='formulario' method='post' action=''>{% csrf_token %}
 		     <table>
-                 <td><input type="text" placeholder="Nombre del Tipo Item" nombre="buscar" width="200px"></td>
+                 <td><input type="text" placeholder="Nombre del Tipo Item" name="buscar" width="200px"></td>
                  <td style="width: 20px"></td>
 		           <td><input class="btn btn-info btn-lrg" type='submit' value='Buscar'/></td>
             </table>
            </form>
    </td>
-
 
 
 
