--- a/demo_project/demo_app/templates/base.html
+++ b/demo_project/demo_app/templates/base.html
@@ -45,19 +45,20 @@
                         <li><a href="{% url 'demo_app.AdminProyectos.views.mis_proyectos' %}">Mis Proyectos</a></li>
                     </ul>
                 </li>
-                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Roles<b class="caret"></b></a>
-                    <ul class="dropdown-menu">
+{#                 <li class="dropdown">#}
+{#                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Roles<b class="caret"></b></a>#}
+{#                    <ul class="dropdown-menu">#}
 {#                        <li><a href="{% url 'demo_app.AdminRoles.views.nuevo_rol' %}">Agregar Rol</a></li>#}
-
+{##}
 {#                        <li><a href="{% url 'demo_app.AdminRoles.views.roles' %}">Listar Roles</a></li>#}
-
-
-                    </ul>
-                </li>
+{##}
+{##}
+{#                    </ul>#}
+{#                </li>#}
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">TipoItem<b class="caret"></b></a>
                     <ul class="dropdown-menu">
+                        <li><a>Username: {{ user.username }}</a></li>
                         <li><a href="{% url 'demo_app.AdminTipoItem.views.nuevoTipoItem' %}">Agregar TipoItem</a></li>
                         <li><a href="{% url 'demo_app.AdminTipoItem.views.tipoitem' %}">Listar TipoItem</a></li>
                     </ul>
@@ -70,6 +71,11 @@
 
     </div>
 </div>
+
+
+
+
+
 
 <div class="container">
 
