--- a/demo_project/demo_app/templates/base.html
+++ b/demo_project/demo_app/templates/base.html
@@ -31,36 +31,28 @@
             <ul class="nav">
 
                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Usuarios<b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administracion<b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="{% url 'demo_app.AdminUsuarios.views.nuevo_usuario' %}">Agregar</a></li>
-                        <li><a href="{% url 'demo_app.AdminUsuarios.views.usuarios' %}">Listar</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Proyectos<b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                       <li><a href="{% url 'demo_app.AdminProyectos.views.nuevo_proyecto' %}">Agregar Proyecto</a></li>
+                        <li><a href="{% url 'demo_app.AdminUsuarios.views.nuevo_usuario' %}">Agregar Usuario</a></li>
+                        <li><a href="{% url 'demo_app.AdminUsuarios.views.usuarios' %}">Listar Usuarios</a></li>
+                         <li><a href="{% url 'demo_app.AdminProyectos.views.nuevo_proyecto' %}">Agregar Proyecto</a></li>
                         <li><a href="{% url 'demo_app.AdminProyectos.views.proyectos' %}">Listar Proyecto</a></li>
-                        <li><a href="{% url 'demo_app.AdminProyectos.views.mis_proyectos' %}">Mis Proyectos</a></li>
+
                     </ul>
                 </li>
-{#                 <li class="dropdown">#}
-{#                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Roles<b class="caret"></b></a>#}
-{#                    <ul class="dropdown-menu">#}
-{#                        <li><a href="{% url 'demo_app.AdminRoles.views.nuevo_rol' %}">Agregar Rol</a></li>#}
-{##}
-{#                        <li><a href="{% url 'demo_app.AdminRoles.views.roles' %}">Listar Roles</a></li>#}
-{##}
-{##}
-{#                    </ul>#}
-{#                </li>#}
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">TipoItem<b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Desarrollo<b class="caret"></b></a>
                     <ul class="dropdown-menu">
+                        <li><a href="{% url 'demo_app.AdminProyectos.views.mis_proyectos' %}">Mis Proyectos</a></li>
                         <li><a>Username: {{ user.username }}</a></li>
                         <li><a href="{% url 'demo_app.AdminTipoItem.views.nuevoTipoItem' %}">Agregar TipoItem</a></li>
                         <li><a href="{% url 'demo_app.AdminTipoItem.views.tipoitem' %}">Listar TipoItem</a></li>
+                    </ul>
+                </li>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestion de Cambios<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+
                     </ul>
                 </li>
             </ul>
