--- a/demo_project/demo_app/templates/HtmlTipoItem/editartipoitem.html
+++ b/demo_project/demo_app/templates/HtmlTipoItem/editartipoitem.html
@@ -6,13 +6,38 @@
 {% endblock %}
 {% block content %}
     <br>
-    <center><h1>Editar Tipo Item</h1></center>
+    <center><h1>Editar TipoItem</h1></center>
     <br><br>
     <center>
 	<form id='formulario' method='post' action=''>{% csrf_token %}
-		<table>{{formulario}}</table>
+		<label>Nombre:</label>
+            <input type="text" maxlength="50" value="{{ tipo_item.nombre }}" name="nombre"/>
+        <label>Descripcion:</label>
+            <textarea name="descripcion" maxlength="200" cols="4">{{ tipo_item.descripcion }}</textarea>
+        <label>Fase:</label>
+        <select name="fase" required="required">
+            {% for fase in fases %}
+                <option value="{{ fase.id_fase }}" {% if tipo_item.fase_id == fase.id_fase %}
+                                    selected {% endif %} > {{ fase.nombre }}</option>
+            {% endfor %}
+        </select>
+        <label>Proyecto:</label>
+        <select name="proyecto" required="required">
+            {% for proyecto in proyectos %}
+            <option value="{{ proyecto.id_proyecto }}" {% if tipo_item.proyecto_id == proyecto.id_proyecto %}
+                                            selected {% endif %}> {{ proyecto.nombre }}</option>
+            {% endfor %}
+        </select>
+         <label>Padre:</label>
+        <select name="padre">
+            <option value="">Seleccionar...</option>
+            {% for tipo in tipo_items %}
+            <option value="{{ tipo.id_tipo_item }}" {% if tipo_item.padre_id == tipo.id_tipo_item %} selected {% endif %} > {{ tipo.nombre }}</option>
+            {% endfor %}
+        </select>
+        <br>
 
-		<input class="btn btn-info" type='submit' value='Actualizar'/>
+		<input class="btn btn-info" type='submit' value='Guardar'/>
 
 	</form>
     </center>
