--- a/demo_project/demo_app/templates/HtmlRelacion/nuevorelacion.html
+++ b/demo_project/demo_app/templates/HtmlRelacion/nuevorelacion.html
@@ -10,8 +10,27 @@
     <br><br>
     <center>
 	<form id='formulario' method='post' action=''>{% csrf_token %}
-		<table>{{formulario}}</table>
+		<label>Tipo: </label>
+        <input type="text" maxlength="45" required="" name="tipo"/>
+        <label>Nombre: </label>
+        <input type="text" maxlength="50" required="" name="nombre"/>
+         <label>Anterior: </label>
+        <select name="anterior" required="required">
+            {% for item in items %}
+            <option value="{{ item.id_item }}">{{ item.nombre }}</option>
+            {% endfor %}
 
+        </select>
+         <label>Posterior: </label>
+        <select name="posterior" required="required">
+            {% for item in items %}
+            <option value="{{ item.id_item }}">{{ item.nombre }}</option>
+            {% endfor %}
+
+        </select>
+
+
+        <br>
 		<input class="btn btn-info" type='submit' value='Registrar'/>
 
 	</form>
