--- a/demo_project/demo_app/templates/HtmlRelacion/relacion.html
+++ b/demo_project/demo_app/templates/HtmlRelacion/relacion.html
@@ -17,7 +17,7 @@
    <td>
             <form id='formulario' method='post' action=''>{% csrf_token %}
 		     <table>
-                 <td><input type="text" placeholder="Nombre del Tipo Item" name="buscar" width="200px"></td>
+                 <td><input type="text" placeholder="Nombre de la relacion" name="buscar" width="200px"></td>
                  <td style="width: 20px"></td>
 		           <td><input class="btn btn-info btn-lrg" type='submit' value='Buscar'/></td>
             </table>
@@ -33,15 +33,20 @@
  <table class="table table-bordered table-condensed" >
     <tr>
         <th class="navbar-inner">Tipo</th>
-        <th class="navbar-inner">Codigo</th>
+        <th class="navbar-inner">Nombre</th>
+        <th class="navbar-inner">Anterior</th>
+        <th class="navbar-inner">Posterior</th>
         <th class="navbar-inner">Accion</th>
     </tr>
     {% for dato in relacion %}
     <tr>
 	    <td >{{dato.tipo }}</td>
-        <td>{{ dato.codigo }}</td>
-        <td> <a href="{% url 'demo_app.AdminTipoItem.views.editartipoitem' dato.id_relacion %}">Editar</a>
-            -<a href="{% url 'demo_app.AdminTipoItem.views.eliminartipoitem' dato.id_relacion %}">Eliminar</a></td>
+        <td>{{ dato.nombre }}</td>
+        <td>{{ dato.anterior.nombre }}</td>
+        <td>{{ dato.posterior.nombre }}</td>
+
+        <td> <a href="{% url 'demo_app.AdminRelacion.views.editarrelacion' dato.id_relacion %}">Editar</a>
+            {% comment %}-<a href="{% url 'demo_app.AdminRelacion.views.eliminarrelacion' dato.id_relacion %}">Eliminar</a> {% endcomment %}</td>
 
 
 	</tr>
