--- a/demo_project/demo_app/templates/HtmlRelacion/relacion.html
+++ b/demo_project/demo_app/templates/HtmlRelacion/relacion.html
@@ -22,6 +22,7 @@
     <tr>
         <th class="navbar-inner">Tipo</th>
         <th class="navbar-inner">Nombre</th>
+        <th class="navbar-inner">Actual</th>
         <th class="navbar-inner">Anterior</th>
         <th class="navbar-inner">Posterior</th>
         <th class="navbar-inner">Accion</th>
@@ -30,6 +31,7 @@
     <tr>
 	    <td >{{dato.tipo }}</td>
         <td>{{ dato.nombre }}</td>
+        <td>{{ dato.actual.nombre }}</td>
         <td>{{ dato.anterior.nombre }}</td>
         <td>{{ dato.posterior.nombre }}</td>
 
