--- a/demo_project/demo_app/templates/HtmlTipoItem/tipo_item_to_item.html
+++ b/demo_project/demo_app/templates/HtmlTipoItem/tipo_item_to_item.html
@@ -26,7 +26,9 @@
 	    <td><em>{{dato.nombre}}</em></td>
 
         <td>{{ dato.descripcion }}</td>
-    <td><a href="{% url 'demo_app.AdminItem.views.TipoItem_editar_item' dato.id_item %}">Editar</a></td>
+    <td><a href="{% url 'demo_app.AdminItem.views.TipoItem_editar_item' dato.id_item %}">Editar</a>
+    - <a href="{% url 'demo_app.AdminRelacion.views.relacion_item' dato.id_item %}">Relacionar</a>
+    </td>
 
 	</tr>
 	{% endfor %}
