--- a/demo_project/demo_app/templates/base.html
+++ b/demo_project/demo_app/templates/base.html
@@ -70,8 +70,8 @@
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Atributo Item<b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="{% url 'demo_app.AdminAtributoItem.views.atributoitem' %}">Atributo Item</a></li>
-                        <li><a href="{% url 'demo_app.AdminAtributoItem.views.nuevoatributoitem' %}">Nuevo Atributo Item</a></li>
+                        <li><a href="{% url 'demo_app.AdminAtributosItem.views.atributoitem' %}">Atributo Item</a></li>
+                        <li><a href="{% url 'demo_app.AdminAtributosItem.views.nuevoatributoitem' %}">Nuevo Atributo Item</a></li>
                     </ul>
                 </li>
 
