--- a/demo_project/demo_app/templates/HtmlRelacion/relacion_items.html
+++ b/demo_project/demo_app/templates/HtmlRelacion/relacion_items.html
@@ -1,22 +1,23 @@
 {% extends 'base.html' %}
 {% load bootstrap_toolkit %}
-{% block title %} Relacion{% endblock %}
+{% block title %}Editar Relacion{% endblock %}
 {% block extra_head %}
 
 {% endblock %}
 {% block content %}
     <br>
-    <center><h1> Relacion</h1></center>
+    <center><h1>Relacionar</h1></center>
     <br><br>
     <center>
 	<form id='formulario' method='post' action=''>{% csrf_token %}
 
 
         	<label>Tipo: </label>
-        <input type="text" maxlength="45" required="" value="{{ relacion.tipo }}" name="tipo"/>
+        <input type="text" maxlength="45" required="" value="ANTECESOR-SUCESOR" readonly name="tipo"/>
         <label>Nombre: </label>
         <input type="text" maxlength="50" required="" value="{{ relacion.nombre }}" name="nombre"/>
-
+    <label>Actual: </label>
+        <input type="text" maxlength="50" disabled required="" value="{{ actual.nombre }}" name="nombre"/>
          <label>Anterior: </label>
         <select name="anterior" required="required">
             {% for item in items %}
