--- a/demo_project/demo_app/templates/HtmlAtributoItem/atributoitem.html
+++ b/demo_project/demo_app/templates/HtmlAtributoItem/atributoitem.html
@@ -22,16 +22,19 @@
     <tr>
         <th class="navbar-inner">Tipo</th>
         <th class="navbar-inner">Nombre</th>
+        <th class="navbar-inner">Valor por Defecto</th>
         <th class="navbar-inner">Item</th>
+        <th class="navbar-inner">Accion</th>
     </tr>
-    {% for dato in atributo_item %}
+    {% for dato in objetos %}
     <tr>
 	    <td >{{dato.tipo }}</td>
         <td>{{ dato.nombre }}</td>
+        <td>{{ dato.valor_defecto }}</td>
         <td>{{ dato.item.nombre }}</td>
 
         <td> <a href="{% url 'demo_app.AdminAtributosItem.views.editaratributoitem' dato.id_atributo_por_item %}">Editar</a>
-            {% comment %}-<a href="{% url 'demo_app.AdminRelacion.views.eliminarrelacion' dato.id_relacion %}">Eliminar</a> {% endcomment %}</td>
+            -<a href="{% url 'demo_app.AdminAtributosItem.views.eliminaratributoitem' dato.id_atributo_por_item %}">Eliminar</a></td>
 
 
 	</tr>
