--- a/demo_project/demo_app/templates/HtmlAtributoItem/editaratributoitem.html
+++ b/demo_project/demo_app/templates/HtmlAtributoItem/editaratributoitem.html
@@ -19,12 +19,7 @@
         <label>Valor Defecto: </label>
         <input type="text" maxlength="50" required="" value="{{ atributo.valor_defecto }}" name="valor_defecto"/>
          <label>Item: </label>
-        <select name="Item" required="required">
-            {% for item in items %}
-            <option value="{{ item.id_item }}" {% if relacion.anterior_id == item.id_item %} selected {% endif %}>{{ item.nombre }}</option>
-            {% endfor %}
-
-        </select>
+        <input type="text" maxlength="50" required="" disabled value="{{ item.nombre }}" name="valor_defecto"/>
 
         <br>
 		<input class="btn btn-info" type='submit' value='Actualizar'/>
