--- a/demo_project/demo_app/templates/HtmlAtributoItem/atributos_por_item.html
+++ b/demo_project/demo_app/templates/HtmlAtributoItem/atributos_por_item.html
@@ -4,18 +4,10 @@
 
 {% block extra_head %}
  <center>
-        <h1>Lista de Atributo Item</h1>
+        <h1>Lista de Atributos del Item: {{ item.nombre }}</h1>
     </center>
 {% endblock %}
 {% block content %}
-   <table>
-   <td style="width: 70%;margin-right: 0px; margin-left: 100%; ">
-        {{ lines|pagination }}
-   </td>
-
-
-   </table>
-
 
 
  <table class="table table-bordered table-condensed" >
@@ -35,7 +27,8 @@
 
         <td> <a href="{% url 'demo_app.AdminAtributosItem.views.editaratributoitem' dato.id_atributo_por_item %}">Editar</a>
             -<a href="{% url 'demo_app.AdminAtributosItem.views.eliminaratributoitem' dato.id_atributo_por_item %}">Eliminar</a>
-        -<a href="{% url 'demo_app.AdminAtributosItem.views.ver_atributo' dato.id_atributo_por_item %}">Ver</a>
+                -<a href="{% url 'demo_app.AdminAtributosItem.views.ver_atributo' dato.id_atributo_por_item %}">Ver Atributo</a>
+
         </td>
 
 
