--- a/demo_project/demo_app/templates/HtmlTipoItem/tipo_item_to_item.html
+++ b/demo_project/demo_app/templates/HtmlTipoItem/tipo_item_to_item.html
@@ -36,7 +36,7 @@
     <tr>
         <th class="navbar-inner">Nombre</th>
         <th class="navbar-inner">Descripcion</th>
-        <th class="navbar-inner">Acciones</th>
+        <th class="navbar-inner">Accion</th>
     </tr>
     {% for dato in datos %}
     <tr>
